--- a/package.json
+++ b/package.json
@@ -28,21 +28,6 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "postcss": "^8.4.21",
-    "postcss-calc": "^8.2.4",
-    "postcss-conditionals": "^2.1.0",
-    "postcss-each": "^1.1.0",
-    "postcss-each-variables": "^0.3.0",
-    "postcss-extend": "^1.0.5",
-    "postcss-for": "^2.1.1",
-    "postcss-import": "^15.1.0",
-    "postcss-mixins": "^9.0.4",
-    "postcss-nested": "^6.0.0",
-    "postcss-nested-ancestors": "^3.0.0",
-    "postcss-preset-env": "^8.0.1",
-    "postcss-scss": "^4.0.6",
-    "postcss-simple-vars": "^7.0.1",
-    "postcss-url": "^10.1.3",
     "prettier": "^2.8.3",
     "stylelint": "^14.16.1",
     "stylelint-config-recommended": "^9.0.0",
@@ -58,10 +43,11 @@
     "gulp-imagemin": "^8.0.0",
     "gulp-jsbeautifier": "^3.0.1",
     "gulp-nunjucks-render": "^2.2.3",
-    "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
     "gulp-svg-symbols": "^3.2.3",
     "normalize.css": "^8.0.1",
+    "sass": "^1.58.0",
     "webpack-stream": "^7.0.0"
   }
 }
