--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "@popperjs/core": "^2.11.6",
     "babel-loader": "^9.1.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -30,11 +31,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.3",
     "stylelint": "^14.16.1",
-    "stylelint-config-recommended": "^9.0.0",
+    "stylelint-config-twbs-bootstrap": "^7.0.0",
     "webpack": "^5.75.0"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
+    "bootstrap": "^5.2.3",
     "browser-sync": "^2.27.11",
     "del": "^7.0.0",
     "fancy-log": "^2.0.0",
@@ -46,7 +48,6 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-svg-symbols": "^3.2.3",
-    "normalize.css": "^8.0.1",
     "sass": "^1.58.0",
     "webpack-stream": "^7.0.0"
   }
