--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-starterkit",
+  "name": "MasterShot",
   "description": "Frontend starter kit to accelerate the creation of web pages",
   "author": "Roman Krasinskyi <roman.krasinskyi@gmail.com>",
   "license": "MIT",
