--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MasterShot",
-  "description": "Frontend starter kit to accelerate the creation of web pages",
-  "author": "Roman Krasinskyi <roman.krasinskyi@gmail.com>",
+  "description": "",
+  "author": "",
   "license": "MIT",
   "version": "1.0.0",
   "repository": {
